react/MegaMenu/styles.css
.styledLink,
.goBackButton,
.triggerContainer {
  border: none;
  background: transparent;
  outline: transparent;
}

.hideArrow svg {
  display: none;
}

.triggerContainer {
  display: flex;
  align-items: center;
}

.triggerContainer::after {
  content: 'Produse';
  font-size: 1.25rem;
}

.triggerButtonIcon {
  margin-right: 0.5rem;
  display: block;
}

.menuContainerNav {
  box-shadow: 0px 2000px 0px 2000px rgba(0, 0, 0, 0.25);
  border: none;
  border-radius: 0 0 0.25rem 0.25rem;
  background-color: #fff;
  width: 100%;
  overflow: hidden;
  height: 33.75rem;
}

.menuContainer {
  min-height: 33.75rem;
  min-width: 15rem;
  max-width: 15rem;
  padding-bottom: 0;
  background-color: rgb(0 0 0 / 10%);
  border: unset;
}

.submenuContainer {
  max-height: 33.75rem;
  padding: 0;
  overflow: unset;
}

.submenuList {
  columns: 12.5rem 3;
  column-fill: balance;
}

.submenuList > .submenuItem {
  max-width: 12.5rem;
  break-inside: avoid;
  margin-bottom: 1.5rem;
}

.departmentActive {
  background-color: #fff;
}

.menuItem .styledLinkContainer {
  padding: unset;
}

.menuItem .styledLink {
  height: 2.8125rem;
  display: flex;
}

.menuItem .styledLinkText {
  line-height: 1;
}

.menuItemIcon {
  max-width: 1.25rem;
  max-height: 1.25rem;
  margin-right: 0.5rem;
  display: block;
}

.departmentsTitle,
.submenuContainerTitle {
  display: none;
}

.menuItemBadge {
  background-color: #fcb116;
  color: #fff;
  border-radius: 0.25rem;
  padding: 0.125rem 0.313rem;
  font-size: 0.625rem;
  font-weight: bold;
  margin-left: 0.3125rem;
  display: block;
  line-height: 1;
}

.styledLink {
  font-size: 0.8125rem;
}

.departmentActive .styledLink,
.departmentActive .styledLink:hover {
  font-weight: bold;
}

.submenuItem--isClosed .seeAllLinkContainer {
  display: none;
}

.submenuItem--isClosed .styledLinkContainer .styledLink:first-child:hover {
  text-decoration: underline;
  color: #fcb116;
}

.seeAllLink:hover {
  color: #e95c48;
}

.departmentBannerContainer {
  width: 25%;
}

.departmentBanner {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/****** Media Queries ******/

@media only screen and (min-width: 1026px) {
  .accordionIconContainer {
    display: none;
  }

  .submenuItemsContainer {
    padding: 1rem;
    overflow-y: auto;
    width: 75%;
  }

  .submenuItemsContainer::-webkit-scrollbar {
    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
  }

  .submenuItemsContainer {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

@media only screen and (max-width: 1025px) {
  .goBackContainer {
    margin-top: 1rem;
  }
}

